# tauri-study-app

./: README.md  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  remind-study.db  remind-study.db-shm  remind-study.db-wal  tauri.conf.json
src-tauri/migrations/: 20230317131641_study_logs.sql
src-tauri/src/: infrastructures.rs  main.rs  models.rs
src-tauri/src/infrastructures/: content.rs  db.rs
src-tauri/src/models/: study_log.rs
src-tauri/src/usecases/: content.rs
